--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -25,7 +25,7 @@
 		<log4jVersion>1.2.17</log4jVersion>
 		<logbackVersion>1.0.9</logbackVersion>
 		<slf4jVersion>1.7.2</slf4jVersion>
-		<springVersion>3.1.3.RELEASE</springVersion>
+		<springVersion>3.2.0.RELEASE</springVersion>
 		<sulkyVersion><!-- SV -->0.9.16-SNAPSHOT</sulkyVersion>
 		<lilithVersion>${project.version}</lilithVersion>
 		<!-- The following lines prevent "[WARNING] Using platform encoding[..]" messages -->
@@ -537,8 +537,8 @@
 			
 			<dependency>
 				<groupId>com.jgoodies</groupId>
-				<artifactId>looks</artifactId>
-				<version>2.2.2</version>
+				<artifactId>jgoodies-looks</artifactId>
+				<version>2.5.2</version>
 			</dependency>
 			
 			<dependency>
