--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -220,7 +220,7 @@
 
 		<dependency>
 			<groupId>com.jgoodies</groupId>
-			<artifactId>looks</artifactId>
+			<artifactId>jgoodies-looks</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
