--- a/sandbox/logback-access-sandbox/pom.xml
+++ b/sandbox/logback-access-sandbox/pom.xml
@@ -16,12 +16,6 @@
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
-	<!-- Override global versions -->
-	<properties>
-		<logbackVersion>0.9.28</logbackVersion>
-		<slf4jVersion>1.6.1</slf4jVersion>
-	</properties>
-
 	<build>
 		<finalName>lb-access-sandbox</finalName>
 		<plugins>
@@ -34,16 +28,10 @@
 			</plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.26</version>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>7.6.8.v20121106</version>
 				<configuration>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
-					<connectors>
-						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-							<port>8080</port>
-							<maxIdleTime>60000</maxIdleTime>
-						</connector>
-					</connectors>
 					<requestLog implementation="ch.qos.logback.access.jetty.RequestLogImpl">
 						<fileName>src/main/jetty/logback-access.xml</fileName>
 					</requestLog>
