--- a/lilith-engine/pom.xml
+++ b/lilith-engine/pom.xml
@@ -32,6 +32,12 @@
 		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.data.converter</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.data.eventsource</artifactId>
 			<scope>compile</scope>
 		</dependency>
