Implemented log4j converter.

--- a/log4j/log4j-producer/pom.xml
+++ b/log4j/log4j-producer/pom.xml
@@ -33,6 +33,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.data.converter</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.data.logging</artifactId>
 			<scope>compile</scope>
 		</dependency>
