Refactoring module names and artifact ids.
:logback-access-adapter => :logback-converter-access
access-adapter => converter-access
de.huxhorn.lilith.logback.access-adapter => de.huxhorn.lilith.logback.converter-access

:logback-logging-adapter => :logback-converter-classic
logging-adapter => converter-classic
de.huxhorn.lilith.logback.logging-adapter => de.huxhorn.lilith.logback.converter-classic

:log4j-producer => :converter-log4j
log4j-producer => converter-log4j
de.huxhorn.lilith.log4j.producer => de.huxhorn.lilith.log4j.converter

--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -202,7 +202,7 @@
 
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.log4j.producer</artifactId>
+			<artifactId>de.huxhorn.lilith.log4j.converter</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
@@ -252,7 +252,7 @@
 
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.logback.logging-adapter</artifactId>
+			<artifactId>de.huxhorn.lilith.logback.converter-classic</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		
