--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -243,13 +243,13 @@
 
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
-				<artifactId>de.huxhorn.lilith.logback.logging-adapter</artifactId>
+				<artifactId>de.huxhorn.lilith.logback.converter-classic</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
 			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
-				<artifactId>de.huxhorn.lilith.logback.access-adapter</artifactId>
+				<artifactId>de.huxhorn.lilith.logback.converter-access</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
 			
@@ -273,7 +273,7 @@
 			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
-				<artifactId>de.huxhorn.lilith.log4j.producer</artifactId>
+				<artifactId>de.huxhorn.lilith.log4j.converter</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
 
