--- a/log4j/converter-log4j/pom.xml
+++ b/log4j/converter-log4j/pom.xml
@@ -3,11 +3,11 @@
 		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
-	<artifactId>de.huxhorn.lilith.logback.access-adapter</artifactId>
+	<artifactId>de.huxhorn.lilith.log4j.converter</artifactId>
 	<version><!-- LV -->0.9.43-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>Logback Access Adapter</name>
-	<description>This file is part of Lilith. It contains the adapter to translate from logback to lilith access events.</description>
+	<name>Lilith - LOG4J - Converter</name>
+	<description>This file is part of Lilith. It contains the LOG4J converter.</description>
 	<url>http://lilith.huxhorn.de/projects/${project.artifactId}/</url>
 	
 	<parent>
@@ -39,34 +39,49 @@
 
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.data.access</artifactId>
+			<artifactId>de.huxhorn.lilith.data.logging</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		
-		<!--
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.log4j.throwable</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.buffers</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.engine</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		-->
 		
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-access</artifactId>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>de.huxhorn.sulky</groupId>
-			<artifactId>de.huxhorn.sulky.codec</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		
-		<!--
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
 		</dependency>
 		
@@ -75,7 +90,6 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		-->
 	</dependencies>
 </project>
 
