--- a/logback/multiplex-appender-classic-json/pom.xml
+++ b/logback/multiplex-appender-classic-json/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic-json</artifactId>
 	<version><!-- LV -->0.9.43-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>Logback Multiplex Appender Classic - XML</name>
+	<name>Logback Multiplex Appender Classic - JSON</name>
 	<description>This file is part of Lilith. It contains the multiplexing logging appender (JSON).</description>
 	<url>http://lilith.huxhorn.de/projects/${project.artifactId}/</url>
 	
