--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jan 25 20:41:05 CET 2013
+#Mon Jan 28 10:19:49 CET 2013
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.4-rc-3-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.4-bin.zip
