--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ compareGradleBuilds {
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '1.4'
+	gradleVersion = '1.5-rc-2'
 }
 
 task javadoc(type: Javadoc) {
