--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Mar 26 10:51:52 CET 2013
+#Fri Apr 05 15:29:20 CEST 2013
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.5-rc-3-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.5-bin.zip
