--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -2,7 +2,7 @@ project.ext.sulkyBaseVersion = '0.9.16'
 
 project.ext.versions = [
 'aspectj':        '1.7.1',
-'jackson':        '1.9.11',
+'jackson':        '2.2.0',
 'log4j':          '1.2.17',
 'log4j2':         '2.0-beta4',
 'logback':        '1.0.11',
@@ -28,8 +28,7 @@ project.ext.libraries = [
 'jcl-over-slf4j':           "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
 'jgroups-all':              'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jgroups-all:2.8.0.CR3',
 'jmdns':                    'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jmdns:3.0',
-'jackson-core':             "org.codehaus.jackson:jackson-core-lgpl:${versions.jackson}",
-'jackson-mapper':           "org.codehaus.jackson:jackson-mapper-lgpl:${versions.jackson}",
+'jackson-databind':         "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
 'jcommander':               'com.beust:jcommander:1.30',
 'jgoodies-looks':           'com.jgoodies:jgoodies-looks:2.5.2',
 'junique':                  'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.junique:1.0.2',
