--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -21,7 +21,7 @@
 	<properties>
 		<aspectjVersion>1.7.1</aspectjVersion>
 		<groovyVersion>2.1.3</groovyVersion>
-		<jacksonVersion>1.9.11</jacksonVersion>
+		<jacksonVersion>2.2.0</jacksonVersion>
 		<log4jVersion>1.2.17</log4jVersion>
 		<log4j2Version>2.0-beta4</log4j2Version>
 		<logbackVersion>1.0.11</logbackVersion>
@@ -519,14 +519,8 @@
 			</dependency>
 			
 			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-core-lgpl</artifactId>
-				<version>${jacksonVersion}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-mapper-lgpl</artifactId>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
 				<version>${jacksonVersion}</version>
 			</dependency>
 			
